# fastapi-realworld-example-app

./: .drone.yml  .env.example  .env.testing  .envrc  .gitignore  Dockerfile  Makefile  Pipfile  README.md  Taskfile.yml  alembic.ini  compose.yaml  docker-compose.yaml  mise.toml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.gitea/workflows/: build.yaml
alembic/: env.py
alembic/versions/: 29b2b20b29d7_.py  6f9fb04fb328_create_users_table.py  ad17d7c49200_initialize.py
app/: config.py  dependencies.py  main.py  seed.py
app/api/: api.py  deps.py  users.py
app/api/routes/: articles.py  auth.py  comments.py  favorites.py  profiles.py  tags.py  user.py
app/core/: config.py  security.py
app/crud/: __init__.py  crud_article.py  crud_comment.py  crud_user.py
app/db/: base_class.py  database.py  models.py  session.py
app/db/queries/: users.py
app/models/: article.py  comment.py  tag.py  user.py
app/routers/: auth.py  user.py  users.py
app/schemas/: articles.py  base.py  comments.py  profiles.py  tags.py  users.py
tests/: conftest.py
tests/api/articles/: test_article_create.py  test_article_delete.py  test_article_favorite.py  test_article_get.py  test_article_list.py  test_article_update.py
tests/api/comments/: test_comment_create.py  test_comment_delete.py  test_comment_list.py
tests/api/profiles/: test_profile_follow.py  test_profile_get.py
tests/api/tags/: test_tag_list.py
tests/api/users/: test_current_user.py  test_login_user.py  test_register.py  test_register_user.py  test_update_user.py
