[project]
authors = [
    { name = "Adrien Beaudouin", email = "adrien.beaudouin@outlook.com" },
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi<1.0.0,>=0.115.0",
    "uvicorn[standard]<1.0.0,>=0.34.0",
    "python-jose[cryptography]<4.0.0,>=3.3.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "alembic<2.0.0,>=1.8.1",
    "python-slugify<9.0.0,>=8.0.0",
    "pydantic[email]<3.0.0,>=2.0.0",
    "requests<3.0.0,>=2.28.1",
    "httpx<1.0.0,>=0.28.0",
    "sqlalchemy<3.0.0,>=2.0.7",
    "pydantic-settings<3.0.0,>=2.0.1",
    "psycopg[binary,pool]<4.0.0,>=3.1.12",
    "faker<38.0.0,>=33.0.0",
    "bcrypt<5.0.0",
]
name = "fastapi-realworld-example-app"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.11.0",
    "pytest<9.0.0,>=8.0.0",
    "pytest-cov>=7.0.0",
    "types-python-slugify<9.0.0,>=8.0.0",
    "ruff<1.0.0,>=0.8.0",
    "pytest-asyncio>=0.25.3",
]

[tool.ruff]
target-version = "py311"
line-length = 120
lint.extend-select = ["UP", "RUF", "I"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
