[project]
name = "fastapi-realworld-example-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Adrien Beaudouin", email = "adrien.beaudouin@outlook.com" },
]
dependencies = [
  "alembic<2.0.0,>=1.8.1",
  "bcrypt>=5.0.0",
  "faker>=40.0.0",
  "fastapi<1.0.0,>=0.115.0",
  "httpx<1.0.0,>=0.28.0",
  "psycopg[binary,pool]<4.0.0,>=3.1.12",
  "pydantic-settings<3.0.0,>=2.0.1",
  "pydantic[email]<3.0.0,>=2.0.0",
  "python-jose[cryptography]<4.0.0,>=3.3.0",
  "python-slugify<9.0.0,>=8.0.0",
  "requests<3.0.0,>=2.28.1",
  "sqlalchemy<3.0.0,>=2.0.7",
  "uvicorn[standard]<1.0.0,>=0.34.0",
]

[dependency-groups]
dev = [
  "mypy<2.0.0,>=1.11.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=0.25.3",
  "pytest-cov>=7.0.0",
  "ruff<1.0.0,>=0.8.0",
  "types-python-slugify<9.0.0,>=8.0.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py314"
line-length = 120
lint.extend-select = ["UP", "RUF", "I"]
